; ModuleID = '/home/carl/AnghaBench/disque/src/extr_job.c_validateJobIdOrReply.c'
source_filename = "/home/carl/AnghaBench/disque/src/extr_job.c_validateJobIdOrReply.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@C_ERR = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [32 x i8] c"-BADID Invalid Job ID format.\0D\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @validateJobIdOrReply(i32* %0, i8* %1, i64 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i8* %1, i8** %5, align 8
  store i64 %2, i64* %6, align 8
  %8 = load i8*, i8** %5, align 8
  %9 = load i64, i64* %6, align 8
  %10 = call i32 @validateJobID(i8* %8, i64 %9)
  store i32 %10, i32* %7, align 4
  %11 = load i32, i32* %7, align 4
  %12 = load i32, i32* @C_ERR, align 4
  %13 = icmp eq i32 %11, %12
  br i1 %13, label %14, label %21

14:                                               ; preds = %3
  %15 = load i32*, i32** %4, align 8
  %16 = icmp ne i32* %15, null
  br i1 %16, label %17, label %21

17:                                               ; preds = %14
  %18 = load i32*, i32** %4, align 8
  %19 = call i32 @sdsnew(i8* getelementptr inbounds ([32 x i8], [32 x i8]* @.str, i64 0, i64 0))
  %20 = call i32 @addReplySds(i32* %18, i32 %19)
  br label %21

21:                                               ; preds = %17, %14, %3
  %22 = load i32, i32* %7, align 4
  ret i32 %22
}

declare dso_local i32 @validateJobID(i8*, i64) #1

declare dso_local i32 @addReplySds(i32*, i32) #1

declare dso_local i32 @sdsnew(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
